2009-03-02 02:23-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* PBMakefileGenerator.m: Move include for common.make.

2009-02-28 00:46-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* PBMakefileGenerator.m: Create scripts in scripts directory under
	pbxbuild so that they can be executed from there.
	* PBPbxNativeTarget.m: Change to dictionary.
	* PBProjectGenerator.m: Cleanup.

2009-02-27 10:32-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* PBMakefileGenerator.m: add scripts to before-all::
	* PBPbxNativeTarget.[hm]: Changes to store script information.

2009-02-26 23:40-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Cleanup
	* PBMakefileGenerator.m: Add return files.
	* PBPbxNativeTarget.m: Fixes for static libraries.

2009-02-24 16:27-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Compile all static if one project is a static lib. 
	* PBMakefileGenerator.m: Final changes to support static libraries.
	* PBPbxNativeTarget.m: Removed unecessary autorelease/retain calls.

2009-02-24 02:40-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* PBPbxNativeTarget.h
	* PBPbxNativeTarget.m: Changes to support leapard style projects.

2009-02-23 21:19-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* PBMakefileGenerator.m
	* PBPbxNativeTarget.h
	* PBPbxNativeTarget.m: Changes to handle static libraries.

2009-01-02 Riccardo Mottola <rmottola@users.sf.net>

	* main.m
	* PBPbxNativeTarget.m, PBPbxProject.m, PBDevelopmentHelper.m, 
	PBMakefileGenerator.m: Removed c-99isms

2008-11-12 01:49-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Copy headers only from target directories.  

2008-11-10 19:14-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* main.m: Copy all headers since many xcode projects
	don't include the headers in the project itself.  
	Also copy the resources.
	* PBMakefileGenerator.m: Minor cleanup
